--- a/branches/zuso1.81/WebRoot/index.html
+++ b/branches/zuso1.81/WebRoot/index.html
@@ -21,9 +21,9 @@
 		</p>
 		<div class="clear"></div>
 		<div id="m" style="width: 720px;">
-			<p id="lg" style="height: 300px">
-				<!-- 
-				<img src="./img/logo.jpg" width="270" height="252"> -->
+		<p style="height: 180px"></p>
+			<p id="lg" style="height: 140px">
+				<img src="./img/sylogo.png" width="360" height="100">
 			</p>
 
 			<div id="s_fm">
